--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,9 @@
+browser.autorefresh.Chrome.INTEGRATED=true
+browser.highlightselection.Chrome.INTEGRATED=true
 config.folder=
 file.reference.Escritorio-Pagina-MH=.
 files.encoding=UTF-8
 site.root.folder=${file.reference.Escritorio-Pagina-MH}
+start.file=Index.html
 test.folder=
+web.context.root=/Pagina-MH
