--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,6 @@ config.folder=
 file.reference.Escritorio-Pagina-MH=.
 files.encoding=UTF-8
 site.root.folder=${file.reference.Escritorio-Pagina-MH}
-start.file=index.html
+start.file=index.php
 test.folder=
 web.context.root=/Pagina-MH
